@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-26T01:53:17Z",
+  "timestamp" : "2022-09-26T08:24:26Z",
   "count_outdated" : 347,
   "uniques_outdated" : 184,
-  "count" : 380,
-  "uniques" : 205,
+  "count" : 382,
+  "uniques" : 207,
   "clones" : [
     {
       "timestamp": "2022-09-12T00:00:00Z",
@@ -102,6 +102,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-26T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
