@@ -1,5 +1,5 @@
 {
-  "count": 33,
+  "count": 35,
   "uniques": 2,
   "clones": [
     {
@@ -71,6 +71,11 @@
       "timestamp": "2022-09-25T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-26T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
