@@ -1,3 +1,11 @@
+2022-09-26T08:24:26Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3126185859
+* notice: last 14d: unq all: 2 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 184 347 / 205 380
+* notice: next accum: outdated-unq outdated-all / unq all: 184 347 / 207 382
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-09-26]
+
 2022-09-26T01:53:17Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3124545935
 * notice: last 14d: unq all: 2 33
